--- a/nestegg/js/package.json
+++ b/nestegg/js/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "axios": "^0.15.2",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.3.1",
     "vue": "^2.0.1",
     "vue-axios": "^1.1.2"
   },
